			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02f: *********************************

IMP: (02/02/05, SMR) Waveform window now sorts signal names in the explorer part on the left (Bug #187).

IMP: (02/02/05, SMR) Status bar now shows both local coordinates and "hierarchical" coordinates
     (relative to an upper-level when the "Down Hierarchy" command has been used) (Bug #162).

IMP: (02/02/05, GVG) Second version of sweep algorithm for merging areas. GeometryHandler transformed into a abstract class.

BUG: (02/01/05, GVG) Covering implants not working with PolyQTree structure after
     code re-organization. Job was not started and it was not detecting correctly original geometries.

BUG: (02/01/05, SMR) Artwork solid arcs are drawn in outline form when made thick.
FIX: In "Artwork.java", change the solid arc to have type FILLED.

BUG: (02/01/05, SMR) Very tiny schematics may crash PostScript output.
FIX: In PostScript.psText(), quit if text descriptor is null.

BUG: (02/01/05, SMR) Numbers are displayed with too many digits (Bug #183)
FIX: In "TextUtils.makeUnits()", call "formatDouble" with 1 parameter to force 3 digits precision.

IMP: (02/01/05, SMR) Highlighting a port on an "example icon" shows the equivalent export in the cell (Bug #142).

IMP: (01/31/05, GVG) First version of sweep algorithm connected to ERC Well

IMP: (01/31/05, SMR) Waveform window draws grid dimmer and in the background.  Horizontal grid lines
     are adjusted to 10%, 30%, 50%, 70%, and 90% of actual values.  Panning commands (Ctrl-2-4-6-8)
     now work in waveform window.

IMP: (01/31/05, DN) Simplifications of Undo API.

BUG: (01/31/05, DN) Incorrect calculation of size of Outline primitives in "NodeInst.redoGeometric()"
FIX: Calculate MBB both in parent and in instance coordinates.
