@@ -1354,6 +1354,9 @@ public class EDIF extends Topology
 	/** Method to report that aggregate names (busses) ARE used. */
 	protected boolean isAggregateNamesSupported() { return true; }
 
+	/** Method to report whether input and output names are separated. */
+	protected boolean isSeparateInputAndOutput() { return true; }
+	
 	/**
 	 * Method to adjust a network name to be safe for EDIF output.
 	 */
