@@ -266,6 +266,9 @@ public class MOSSIM extends Topology
 	/** Method to report that aggregate names (busses) ARE used. */
 	protected boolean isAggregateNamesSupported() { return false; }
 
+	/** Method to report whether input and output names are separated. */
+	protected boolean isSeparateInputAndOutput() { return true; }
+
 	/**
 	 * Method to adjust a network name to be safe for MOSSIM output.
 	 */
