@@ -867,6 +867,9 @@ public class Silos extends Topology
 	/** Method to report that aggregate names (busses) ARE used. */
 	protected boolean isAggregateNamesSupported() { return true; }
 
+	/** Method to report whether input and output names are separated. */
+	protected boolean isSeparateInputAndOutput() { return true; }
+
 	/**
 	 * Method to adjust a network name to be safe for Silos output.
 	 */
